Repairing the dmg done by Tobias reset